--- a/app/index.html
+++ b/app/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html lang="en" ng-app="myApp" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html lang="en" ng-app="myApp" class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html lang="en" ng-app="myApp" class="no-js lt-ie9"> <![endif]-->
+<!--[if lt IE 7]>      <html lang="en" ng-app="weatherApp" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html lang="en" ng-app="weatherApp" class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html lang="en" ng-app="weatherApp" class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html lang="en" ng-app="weatherApp" class="no-js"> <!--<![endif]-->
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>weatherApp</title>
+  <title>My AngularJS App</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
-  <link rel="stylesheet" href="css/app.css">
+  <link rel="stylesheet" href="app.css">
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 <body>
@@ -24,71 +24,19 @@
     </div>
   </header>
 
+  <ul class="menu">
+    <li><a href="#!/forecast">forecast</a></li>
+    <li><a href="#!/view2">view2</a></li>
+  </ul>
 
-  <div class="select-bg">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-            <h4>Please choose a city to find out the local weather</h4>
-            <select class="form-control">
-                <option>Boston</option>
-                <option>New York</option>
-                <option>L.A.</option>
-                <option>Chicago</option>
-                <option>Seattle</option>
-              </select>
-        </div>
-      </div>
-    </div>  
-  </div>
+  <!--[if lt IE 7]>
+      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+  <![endif]-->
 
   <div ng-view></div>
 
-  <div class="container">
-    <div class="row">
-        <div class="col-md-12">
-            <div class="panel panel-primary">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Weather Today</h3>
-                </div>
-                <div class="panel-body">
-                    <dl class="dl-horizontal">
-                        <dt>Started</dt>
-                        <dd>3 Feb. 2013</dd>
-                        <dt>Major Stake Holder</dt>
-                        <dd>HK Fine Foods Inc.</dd>
-                        <dt>Last Year's Turnover</dt>
-                        <dd>$1,250,375</dd>
-                        <dt>Employees</dt>
-                        <dd>40</dd>
-                   </dl>
-                </div>
-            </div>
-        </div>
-      </div>
+  //<div>Angular seed app: v<span app-version></span></div>
 
-      <div class="row">
-        <div class="col-md-4">
-            <div class="panel panel-primary">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Weather Forecast</h3>
-                </div>
-                <div class="panel-body">
-                    <dl class="dl-horizontal">
-                        <dt>Started</dt>
-                        <dd>3 Feb. 2013</dd>
-                        <dt>Major Stake Holder</dt>
-                        <dd>HK Fine Foods Inc.</dd>
-                        <dt>Last Year's Turnover</dt>
-                        <dd>$1,250,375</dd>
-                        <dt>Employees</dt>
-                        <dd>40</dd>
-                   </dl>
-                </div>
-            </div>
-        </div>
-    </div>
-  </div>
   <footer>
     <div class="light-bg">
       <div class="container">
@@ -96,19 +44,16 @@
       </div>
     </div>
   </footer>
-
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
-  <script src="js/app.js"></script>
-  <script src="js/controllers.js"></script>
-  <script src="js/directives.js"></script>
-  <script src="js/services.js"></script>
-  <!-- <script src="view1/view1.js"></script>
-  <script src="view2/view2.js"></script> -->
+  <script src="app.js"></script>
+  <script src="forecast/forecastController.js"></script>
+  <script src="forecast/forecastService.js"></script>
+  <script src="view2/view2.js"></script>
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
