improve file structure

--- a/app/weather/view.html
+++ b/app/weather/view.html
@@ -6,7 +6,7 @@
 			<div class="col-md-12">
 				<h4>Please choose a city to find out the local weather</h4>
 				<select class="form-control">
-					<option ng-repeat="city in locations">{{city}}</option>
+					<option ng-repeat="city in locations" ng>{{city}}</option>
 				</select>
 			</div>
 		</div>
@@ -40,7 +40,7 @@
 			<div class="col-md-4">
 					<div class="panel panel-primary">
 							<div class="panel-heading">
-									<h3 class="panel-title">Weather Forecast</h3>
+									<h3 class="panel-title">Weather weather</h3>
 							</div>
 							<div class="panel-body">
 									<dl class="dl-horizontal">
