--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
   </header>
 
   <ul class="menu">
-    <li><a href="#!/forecast">forecast</a></li>
+    <li><a href="#!/weather">weather</a></li>
     <li><a href="#!/view2">view2</a></li>
   </ul>
 
@@ -35,12 +35,13 @@
 
   <div ng-view></div>
 
-  //<div>Angular seed app: v<span app-version></span></div>
+  
 
   <footer>
     <div class="light-bg">
       <div class="container">
         <h5 class="right">Designed and coded by Yue Zhang</h5>
+        <div class="right">weatherApp: v<span app-version></span></div>
       </div>
     </div>
   </footer>
@@ -51,8 +52,8 @@
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
   <script src="app.js"></script>
-  <script src="forecast/forecastController.js"></script>
-  <script src="forecast/forecastService.js"></script>
+  <script src="weather/controller.js"></script>
+  <script src="weather/service.js"></script>
   <script src="view2/view2.js"></script>
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
