--- a/app/index.html
+++ b/app/index.html
@@ -24,10 +24,10 @@
     </div>
   </header>
 
-  <ul class="menu">
+  <!-- <ul class="menu">
     <li><a href="#!/weather">weather</a></li>
     <li><a href="#!/view2">view2</a></li>
-  </ul>
+  </ul> -->
 
   <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
