--- a/app/weather/view.html
+++ b/app/weather/view.html
@@ -1,10 +1,9 @@
-<p>This is the partial for view 1.</p>
-	
+<!-- select section -->
 <div class="select-bg">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
-				<h4>Please choose a city to find out the local weather</h4>
+				<h4>Please choose a city to find out the local weather today and forecast in 10 days</h4>
 				<select class="form-control" ng-change = "changeLocation()" ng-model = "location">
 					<option ng-repeat="location in locations" >{{location.city}},{{location.state}}</option>
 				</select>
@@ -12,69 +11,72 @@
 		</div>
 	</div>  
 </div>
-
+<!-- weather today and charts -->
+<div class="container w-margin">
+	<div class="row">
+		<div class="col-md-4">
+			<div class="img-area"><img  alt= "this is an iamge" class="big-img" ng-src="https://icons.wxug.com/i/c/j/{{weatherRes.current_observation.icon}}.gif"/>
+				<h2 class="right">{{weatherRes.current_observation.weather}}</h2>
+			</div>
+			<div class="detail-area"><span>{{weatherRes.current_observation.display_location.full}} today</span>
+				<div class="info">
+					<div class="title">Temperature</div>
+					<p>{{weatherRes.current_observation.temperature_string}}</p>
+				</div>
+				<div class="info">
+					<div class="title">Feels Like</div>
+					<p>{{weatherRes.current_observation.feelslike_string}}</p>
+				</div>
+				<div class="info">
+					<div class="title">Humidity</div>
+					<p>{{weatherRes.current_observation.relative_humidity}}</p>
+				</div>
+				<div class="info">
+					<div class="title">Wind</div>
+					<p>{{weatherRes.current_observation.wind_mph}} mph</p>
+				</div>
+				<div class="info">
+					<div class="title">UV</div>
+					<p>{{weatherRes.current_observation.UV}}</p>
+				</div>
+			</div>
+		</div>
+		<div class="col-md-7 col-md-offset-1">
+			<h4>Temperature Forecast in 10 Days</h4>
+			<canvas  id="line" class="chart chart-line" chart-data="data" chart-options="options"
+			chart-labels="labels" chart-series="series" chart-click="onClick">
+			</canvas>
+		</div>
+	</div>
+</div>
+<!-- 10 day forecast details -->
 <div class="container">
 	<div class="row">
-			<div class="col-md-12">
-					<div class="panel panel-primary">
-							<div class="panel-heading">
-									<h3 class="panel-title">weather today in {{weatherRes.current_observation.display_location.full}}</h3>
-							</div>
-							<div class="panel-body">
-								<div class="col-md-3">
-									<img  alt= "this is an iamge" class="big-img" ng-src="https://icons.wxug.com/i/c/j/{{weatherRes.current_observation.icon}}.gif"/>
-									<h4>{{weatherRes.current_observation.weather}}</h4>
-								</div>
-								<div class="col-md-9">
-									<dl class="dl-horizontal">
-											<dt>Temperature</dt>
-											<dd>{{weatherRes.current_observation.temperature_string}}</dd>
-											<dt>Feels like</dt>
-											<dd>{{weatherRes.current_observation.feelslike_string}}</dd>
-											<dt>Wind</dt>
-											<dd>{{weatherRes.current_observation.wind_mph}} mph</dd>
-											<dt>Humidity</dt>
-											<dd>{{weatherRes.current_observation.relative_humidity}}</dd>
-											<dt>UV</dt>
-											<dd>{{weatherRes.current_observation.UV}}</dd>
-										</dl>
-								</div>
-							</div>
+		<div class="col-md-4" ng-repeat="forecast in forecastRes.forecast.simpleforecast.forecastday">
+			<div class="card">
+					<div class="icon"><img  alt= "this is an iamge" class="small-img" ng-src="https://icons.wxug.com/i/c/j/{{forecast.icon}}.gif"/>
+						<h5>{{forecast.date.pretty}}</h5>
 					</div>
-			</div>
-		</div>
-		<div class = "row">
-			<div class="col-md-12">
-					<canvas  id="line" class="chart chart-line" chart-data="data" chart-options="options"
-					chart-labels="labels" chart-series="series" chart-click="onClick">
-					</canvas>
-			</div>
-		</div>
-
-    <div class="row">
-			<div class="col-md-4" ng-repeat="forecast in forecastRes.forecast.simpleforecast.forecastday">
-					<div class="panel panel-primary" >
-							<div class="panel-heading">
-									<h3 class="panel-title">{{forecast.date.pretty}}</h3>
-							</div>
-							<div class="panel-body">
-								<img  alt= "this is an iamge" class="small-img" ng-src="https://icons.wxug.com/i/c/j/{{forecast.icon}}.gif"/>
-								<h4>{{forecast.conditions}}</h4>
-								<dl class="dl-horizontal">
-									<dt>Temperature</dt>
-									<dd>{{forecast.conditions}}</dd>
-									<dt>High</dt>
-									<dd>{{forecast.high.fahrenheit}}</dd>
-									<dt>Low</dt>
-									<dd>{{forecast.low.fahrenheit}}</dd>
-									<dt>Wind</dt>
-									<dd>{{forecast.avewind.mph}} mph</dd>
-									<dt>Humidity</dt>
-									<dd>{{forecast.avehumidity}}</dd>
-									
-								</dl>
-							</div>
+					<div class="bottom-card">
+						<h3>{{forecast.conditions}}</h3>
+						<div class="info">
+							<div class="title">High</div>
+							<p>{{forecast.high.fahrenheit}} F </p>
+						</div>
+						<div class="info">
+							<div class="title">Low</div>
+							<p>{{forecast.low.fahrenheit}} F </p>
+						</div>
+						<div class="info">
+							<div class="title">Humidity</div>
+							<p>{{forecast.avehumidity}} %</p>
+						</div>
+						<div class="info">
+							<div class="title">wind</div>
+							<p>{{forecast.avewind.mph}} mph</p>
+						</div>
 					</div>
-			</div>
-    </div>
-  </div>
+				</div>
+		</div>
+	</div>
+</div>
