added table for forecasts

--- a/app/index.html
+++ b/app/index.html
@@ -24,23 +24,17 @@
     </div>
   </header>
 
-  <!-- <ul class="menu">
-    <li><a href="#!/weather">weather</a></li>
-    <li><a href="#!/view2">view2</a></li>
-  </ul> -->
-
-  <!--[if lt IE 7]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-  <![endif]-->
+  
 
   <div ng-view></div>
+  
 
   
 
   <footer>
-    <div class="light-bg">
+    <div class="footer-bg">
       <div class="container">
-        <h5 class="right">Designed and coded by Yue Zhang</h5>
+        <h6 class="right">Designed and coded by Yue Zhang</h6>
         <!-- <div class="right">weatherApp: v<span app-version></span></div> -->
         <div class ="right"><img ng-src = "http://icons-ak.wxug.com/graphics/wu2/logo_130x80.png"/></div>
       </div>
