--- a/app/weather/view.html
+++ b/app/weather/view.html
@@ -11,72 +11,99 @@
 		</div>
 	</div>  
 </div>
-<!-- weather today and charts -->
-<div class="container w-margin">
-	<div class="row">
-		<div class="col-md-4">
-			<div class="img-area"><img  alt= "this is an iamge" class="big-img" ng-src="https://icons.wxug.com/i/c/j/{{weatherRes.current_observation.icon}}.gif"/>
-				<h2 class="right">{{weatherRes.current_observation.weather}}</h2>
+
+<!-- loading message -->
+<div ng-if="!showContent">
+  <h1 class="center">{{message}}</h1>
+</div>
+<div ng-if="showContent">
+<!-- after the returned promise is resolved .show content to the user -->
+	<!-- weather today and charts -->
+	<div class="container w-margin">
+		<div class="row">
+			<div class="col-md-4">
+				<div class="img-area"><img  alt= "this is an iamge" class="big-img" ng-src="https://icons.wxug.com/i/c/j/{{weatherRes.current_observation.icon}}.gif"/>
+					<h2 class="right">{{weatherRes.current_observation.weather}}</h2>
+				</div>
+				<div class="detail-area"><span>{{weatherRes.current_observation.display_location.full}} now</span>
+					<div class="info">
+						<div class="title">Temperature</div>
+						<p>{{weatherRes.current_observation.temperature_string}}</p>
+					</div>
+					<div class="info">
+						<div class="title">Feels Like</div>
+						<p>{{weatherRes.current_observation.feelslike_string}}</p>
+					</div>
+					<div class="info">
+						<div class="title">Humidity</div>
+						<p>{{weatherRes.current_observation.relative_humidity}}</p>
+					</div>
+					<div class="info">
+						<div class="title">Wind</div>
+						<p>{{weatherRes.current_observation.wind_mph}} mph</p>
+					</div>
+					<div class="info">
+						<div class="title">UV</div>
+						<p>{{weatherRes.current_observation.UV}}</p>
+					</div>
+				</div>
 			</div>
-			<div class="detail-area"><span>{{weatherRes.current_observation.display_location.full}} today</span>
-				<div class="info">
-					<div class="title">Temperature</div>
-					<p>{{weatherRes.current_observation.temperature_string}}</p>
-				</div>
-				<div class="info">
-					<div class="title">Feels Like</div>
-					<p>{{weatherRes.current_observation.feelslike_string}}</p>
-				</div>
-				<div class="info">
-					<div class="title">Humidity</div>
-					<p>{{weatherRes.current_observation.relative_humidity}}</p>
-				</div>
-				<div class="info">
-					<div class="title">Wind</div>
-					<p>{{weatherRes.current_observation.wind_mph}} mph</p>
-				</div>
-				<div class="info">
-					<div class="title">UV</div>
-					<p>{{weatherRes.current_observation.UV}}</p>
+			<div class="col-md-7 col-md-offset-1">
+				<div class="charts-section">
+					<h4>Temperature Forecast in 10 Days</h4>
+					<canvas  id="line" class="chart chart-line" chart-data="data" chart-options="options"
+					chart-labels="labels" chart-series="series" chart-click="onClick">
+					</canvas>
 				</div>
 			</div>
-		</div>
-		<div class="col-md-7 col-md-offset-1">
-			<h4>Temperature Forecast in 10 Days</h4>
-			<canvas  id="line" class="chart chart-line" chart-data="data" chart-options="options"
-			chart-labels="labels" chart-series="series" chart-click="onClick">
-			</canvas>
 		</div>
 	</div>
-</div>
-<!-- 10 day forecast details -->
-<div class="container">
-	<div class="row">
-		<div class="col-md-4" ng-repeat="forecast in forecastRes.forecast.simpleforecast.forecastday">
-			<div class="card">
-					<div class="icon"><img  alt= "this is an iamge" class="small-img" ng-src="https://icons.wxug.com/i/c/j/{{forecast.icon}}.gif"/>
-						<h5>{{forecast.date.pretty}}</h5>
+	<div class="container w-margin">
+			<table class="table" >
+				<thead>
+					<tr>
+						<th ng-repeat="forecast in forecastRes.forecast.simpleforecast.forecastday"><h4>{{forecast.date.weekday}}</h4></th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td ng-repeat="forecast in forecastRes.forecast.simpleforecast.forecastday"><img  alt= "this is an iamge" class="small-img" ng-src="https://icons.wxug.com/i/c/f/{{forecast.icon}}.gif"/></td>
+					</tr>
+					<tr>
+						<td ng-repeat="forecast in forecastRes.forecast.simpleforecast.forecastday"><h5 class="bold">{{forecast.conditions}}</h5></td>
+					</tr>
+				</tbody>
+			</table>
+	</div>
+	<!-- 10 day forecast details -->
+	<div class="container">
+		<div class="row">
+			<div class="col-md-4" ng-repeat="forecast in forecastRes.forecast.simpleforecast.forecastday">
+				<div class="card">
+						<div class="icon"><img  alt= "this is an iamge" class="small-img" ng-src="https://icons.wxug.com/i/c/j/{{forecast.icon}}.gif"/>
+							<h4>{{forecast.date.weekday}} | {{forecast.date.monthname}},{{forecast.date.day}} {{forecast.date.year}} </h4>
+						</div>
+						<div class="bottom-card">
+							<h3>{{forecast.conditions}}</h3>
+							<div class="info">
+								<div class="title">High</div>
+								<p>{{forecast.high.fahrenheit}} F </p>
+							</div>
+							<div class="info">
+								<div class="title">Low</div>
+								<p>{{forecast.low.fahrenheit}} F </p>
+							</div>
+							<div class="info">
+								<div class="title">Humidity</div>
+								<p>{{forecast.avehumidity}} %</p>
+							</div>
+							<div class="info">
+								<div class="title">wind</div>
+								<p>{{forecast.avewind.mph}} mph</p>
+							</div>
+						</div>
 					</div>
-					<div class="bottom-card">
-						<h3>{{forecast.conditions}}</h3>
-						<div class="info">
-							<div class="title">High</div>
-							<p>{{forecast.high.fahrenheit}} F </p>
-						</div>
-						<div class="info">
-							<div class="title">Low</div>
-							<p>{{forecast.low.fahrenheit}} F </p>
-						</div>
-						<div class="info">
-							<div class="title">Humidity</div>
-							<p>{{forecast.avehumidity}} %</p>
-						</div>
-						<div class="info">
-							<div class="title">wind</div>
-							<p>{{forecast.avewind.mph}} mph</p>
-						</div>
-					</div>
-				</div>
+			</div>
 		</div>
 	</div>
 </div>
